--- a/HTML_CSS/Tags.html
+++ b/HTML_CSS/Tags.html
@@ -6,7 +6,7 @@
 
   <body>
     <!-- Distintos tipos de "headings" para mostrar texto en títulos, subtítulos y demás-->
-    <h1>Fullstack insane.</h1>
+    <h1>Fullstack insane.</h1> <!-- Para técnicas de SEO lo ideal es tener un solo "h1"-->
     <h2>Fullstack big.</h2>
     <h3>Fullstack medium.</h3>
     <h4>Fullstack little.</h4>
