CSS first touch

--- a/HTML_CSS/styling.html
+++ b/HTML_CSS/styling.html
@@ -47,7 +47,7 @@
       <li><a href="https://alankke.github.io"> Link.</a></li>
     </ul>
 
-    <img src="https://imgs.search.brave.com/4kbKS1dbBKnlensJEQWYtR2t3TsqTrFdyvofm16Qy_I/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9kcm9p/ZHRlY2hrbm93LmNv/bS9wcm9ncmFtbWlu/Zy93aGljaC1sYW5n/dWFnZXMtc2hvdWxk/LWktbGVhcm4tdG8t/YmVjb21lLWEtZnVs/bC1zdGFjay1kZXZl/bG9wZXIvaW1hZ2Vz/L2Z1bGwtc3RhY2st/d2ViLWRldmVsb3Bl/ci5qcGVn" alt="Fullstack languages list">   
+    <img src="./assets/language_list.jpg" alt="Fullstack languages list">   
 
   </body>
 
