--- a/HTML_CSS/html5.html
+++ b/HTML_CSS/html5.html
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <!-- La etiqueta meta sirve para los motores de búsqueda y técnicas de SEO, el navegador da prioridad a estas-->
   <meta charset="UTF-8"> <!-- Esta sirve para reconocer ciertos caracteres que no se reconocen por si mismo-->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Para mostrar el contenido de manera responsive-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Para mostrar el contenido de manera responsive-->
   <meta name="Fullstack course" description="Mi web con la que empiezo a estudiar FullStack">
   <link rel="stylesheet" href="./css/style5.css"> <!-- Etiqueta para linkear el css a nuestro archivo html-->
   <title>Document</title>
 </head>
+
 <body>
-  <h1>Hello world</h1>
-  
+  <h1 class="red larger">Hello world</h1>
+  <!--Utilizamos el espacio para indicar que utiliza dos clases distintas en la misma etiqueta-->
+  <span>Etiqueta en linea, ocupa unicamente el espacio que necesita</span>
+  <h4>Etiqueta en bloque, ocupa todo el ancho</h4>
+  <!--utilizamos un selector (en este caso la clase) para indicar que simplemente a 
+  este elemento le vamos a aplicar esa clase de estilo. Las clases son útiles para reutilizar estilos a varios elementos-->
+  <span class="bold-italic"> Etiqueta bold italic</span>
+  <p id="p1">Utilizamos el id para utilizar unicamente una vez un estilo.
+    Es mas especifico que la clase
+  </p>
 </body>
+
 </html>
