--- a/HTML_CSS/padding_margin.html
+++ b/HTML_CSS/padding_margin.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/HTML_CSS/css/stylelx.css">
+  <link rel="stylesheet" href="./css/stylelx.css">
   <title>Linus Torvalds bio</title>
 </head>
 <body>
   <div class='info'>
     <h2 class="title-section">Linus Torvalds</h2>
-    <img id="info-image" src="./HTML_CSS/assets/linus.jpg" alt="Linus Torvalds image">
+    <img id="info-image" src="./assets/linus.jpg" alt="Linus Torvalds image">
     <h3 class="title-section">Información personal</h3>
     <h5>Nacimiento</h5>
     <p>28 de diciembre de 1969 (54 años)</p>
