feat: semantic tags

--- a/HTML_CSS/padding_margin.html
+++ b/HTML_CSS/padding_margin.html
@@ -9,26 +9,40 @@
 </head>
 
 <body>
+  <nav>
+    <div class="nav-logo">
+      <img src="./assets/wikipediaLogo.png" alt="Wikipedia Logo" class="nav-logo-img">
+      <p>Wikipedia</p>
+    </div>
+    <div class="nav-items-right">
+      <p>Create account</p>
+      <p>Login</p>
+    </div>
+  </nav>
   <h1>Linus Torvalds</h1>
   <hr>
   <div class="info-and-block">
     <div class="main-info">
-      <p>Linus Benedict Torvalds (Helsinki, Finlandia, 28 de diciembre de 19691​) es un ingeniero de software
-        finlandés-estadounidense,2​ conocido por iniciar y mantener el desarrollo del kernel (en español, núcleo) Linux,
-        basándose en el sistema operativo libre Minix creado por Andrew S. Tanenbaum y en algunas herramientas, varias
-        utilidades y los compiladores desarrollados por el proyecto GNU. Actualmente es responsable de la coordinación
-        del
-        proyecto. También ha desarrollado el software de control de versiones Git.</p>
+      <p>Linus Benedict Torvalds born 28 December 1969 is a Finnish and American software engineer who is the creator
+        and lead developer of the Linux kernel. He also created the distributed version control system Git.
+        He was honored, along with Shinya Yamanaka, with the 2012 Millennium Technology Prize by the Technology Academy
+        Finland "in recognition of his creation of a new open source operating system for computers leading to the
+        widely used Linux kernel".
+        He is also the recipient of the 2014 IEEE Computer Society Computer Pioneer Award and the 2018 IEEE Masaru Ibuka
+        Consumer Electronics Award.
+      </p>
       <h2>Bio</h2>
       <hr>
-      <p>Linus nació en Helsinki, Finlandia, el 28 de diciembre de 1969. Sus padres son Anna y Nils Torvalds,3​ ambos
-        periodistas. Es nieto del estadístico Leo Törnqvist y del poeta Ole Torvalds, y bisnieto del periodista y
-        soldado
-        Toivo Karanko. Torvalds pertenece a la comunidad sueco-parlante de Finlandia. Sus padres tomaron su nombre de
-        Linus Pauling (estadounidense, Premio Nobel de Química 1954). Comenzó sus andanzas informáticas a los 11 años
-        cuando su abuelo Leo Törnqvist, un matemático y estadístico de la Universidad de Helsinki, compró uno de los
-        primeros microordenadores Commodore VIC-20 en 1980 y le pidió ayuda para usarlo;3​4​ de esta manera su primera
-        línea de código fue hecha en lenguaje BASIC.5​</p>
+      <p>Torvalds was born in Helsinki, Finland, on 28 December 1969, the son of journalists Anna and Nils Torvalds, the
+        grandson of statistician Leo Törnqvist and of poet Ole Torvalds, and the great-grandson of journalist and
+        soldier Toivo Karanko.
+        His parents were campus radicals at the University of Helsinki in the 1960s. His family belongs to the
+        Swedish-speaking minority in Finland.
+        He was named after Linus Pauling, the Nobel Prize–winning American chemist, although in the book Rebel Code:
+        Linux and the Open Source Revolution, he is quoted as saying, "I think I was named equally for Linus the Peanuts
+        cartoon character", noting that this made him "half Nobel Prize–winning chemist and half blanket-carrying
+        cartoon character".
+      </p>
     </div>
 
     <div class='info-block'>
