feat: semantic tags II

--- a/HTML_CSS/padding_margin.html
+++ b/HTML_CSS/padding_margin.html
@@ -15,48 +15,72 @@
       <p>Wikipedia</p>
     </div>
     <div class="nav-items-right">
-      <p>Create account</p>
-      <p>Login</p>
+      <a href="#about-us" class="nav-links">About us</a>
+      <a href="#index" class="nav-links">Create account</a>
+      <a href="#index" class="nav-links">Login</a>
     </div>
   </nav>
-  <h1>Linus Torvalds</h1>
-  <hr>
-  <div class="info-and-block">
-    <div class="main-info">
-      <p>Linus Benedict Torvalds born 28 December 1969 is a Finnish and American software engineer who is the creator
-        and lead developer of the Linux kernel. He also created the distributed version control system Git.
-        He was honored, along with Shinya Yamanaka, with the 2012 Millennium Technology Prize by the Technology Academy
-        Finland "in recognition of his creation of a new open source operating system for computers leading to the
-        widely used Linux kernel".
-        He is also the recipient of the 2014 IEEE Computer Society Computer Pioneer Award and the 2018 IEEE Masaru Ibuka
-        Consumer Electronics Award.
-      </p>
-      <h2>Bio</h2>
-      <hr>
-      <p>Torvalds was born in Helsinki, Finland, on 28 December 1969, the son of journalists Anna and Nils Torvalds, the
-        grandson of statistician Leo Törnqvist and of poet Ole Torvalds, and the great-grandson of journalist and
-        soldier Toivo Karanko.
-        His parents were campus radicals at the University of Helsinki in the 1960s. His family belongs to the
-        Swedish-speaking minority in Finland.
-        He was named after Linus Pauling, the Nobel Prize–winning American chemist, although in the book Rebel Code:
-        Linux and the Open Source Revolution, he is quoted as saying, "I think I was named equally for Linus the Peanuts
-        cartoon character", noting that this made him "half Nobel Prize–winning chemist and half blanket-carrying
-        cartoon character".
-      </p>
-    </div>
 
-    <div class='info-block'>
-      <h2 class="title-section">Linus Torvalds</h2>
-      <img id="info-image" src="./assets/linus.jpg" alt="Linus Torvalds image">
-      <h3 class="title-section">Información personal</h3>
-      <h5>Nacimiento</h5>
-      <p>28 de diciembre de 1969 (54 años)</p>
-      <h5>Nacionalidad</h5>
-      <p>fines estadounidense</p>
-      <h5>Religión</h5>
-      <p>Ateísmo</p>
+  <header>
+    <h1 class="header-text">Welcome to my own biography page</h1>
+  </header>
+
+  <section id="about-us">
+    <h2 class="section1-title">About us</h2>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda esse odio totam aliquam doloremque ratione
+      obcaecati impedit deleniti eos sunt nam eligendi eaque consequatur provident iure, distinctio ea autem quam hic
+      delectus? Commodi temporibus facere ex. Temporibus dicta rem delectus cumque sunt cum quia esse eos tempore harum.
+      Cupiditate, delectus iure est facere architecto exercitationem consequuntur consectetur aut. Quidem est repellat
+      reiciendis nesciunt incidunt magni ratione qui. Rerum, saepe in.</p>
+  </section>
+
+  <section id="weekly-bio">
+    <div class="info-and-block">
+      <div class="main-info">
+        <h3>Linus Torvalds</h3>
+        <hr>
+        <p>Linus Benedict Torvalds born 28 December 1969 is a Finnish and American software engineer who is the creator
+          and lead developer of the Linux kernel. He also created the distributed version control system Git.
+          He was honored, along with Shinya Yamanaka, with the 2012 Millennium Technology Prize by the Technology
+          Academy
+          Finland "in recognition of his creation of a new open source operating system for computers leading to the
+          widely used Linux kernel".
+          He is also the recipient of the 2014 IEEE Computer Society Computer Pioneer Award and the 2018 IEEE Masaru
+          Ibuka
+          Consumer Electronics Award.
+        </p>
+        <h4>Bio</h4>
+        <hr>
+        <p>Torvalds was born in Helsinki, Finland, on 28 December 1969, the son of journalists Anna and Nils Torvalds,
+          the
+          grandson of statistician Leo Törnqvist and of poet Ole Torvalds, and the great-grandson of journalist and
+          soldier Toivo Karanko.
+          His parents were campus radicals at the University of Helsinki in the 1960s. His family belongs to the
+          Swedish-speaking minority in Finland.
+          He was named after Linus Pauling, the Nobel Prize–winning American chemist, although in the book Rebel Code:
+          Linux and the Open Source Revolution, he is quoted as saying, "I think I was named equally for Linus the
+          Peanuts
+          cartoon character", noting that this made him "half Nobel Prize–winning chemist and half blanket-carrying
+          cartoon character".
+        </p>
+      </div>
+
+      <div class='info-block'>
+        <h2 class="title-section">Linus Torvalds</h2>
+        <img id="info-image" src="./assets/linus.jpg" alt="Linus Torvalds image">
+        <h3 class="title-section">Personal info</h3>
+        <h5>Born</h5>
+        <p>28 December 1969 (age 54)</p>
+        <h5>Nationality</h5>
+        <p>Finnish American</p>
+        <h5>Occupation</h5>
+        <p>Software engineer</p>
+      </div>
     </div>
-  </div>
+  </section>
+  <footer>
+    Developed by <a href="https://alankke.github.io" target="_blank">Alan Kennedy</a>
+  </footer>
 </body>
 
 </html>
