--- a/HTML_CSS/padding_margin.html
+++ b/HTML_CSS/padding_margin.html
@@ -11,8 +11,7 @@
 <body>
   <nav>
     <div class="nav-logo">
-      <img src="./assets/wikipediaLogo.png" alt="Wikipedia Logo" class="nav-logo-img">
-      <p>Wikipedia</p>
+      <img src="./assets/logo.png" alt="Logo" class="nav-logo-img">
     </div>
     <div class="nav-items-right">
       <a href="#about-us" class="nav-links">About us</a>
