feat: box shadow

--- a/HTML_CSS/biographies.html
+++ b/HTML_CSS/biographies.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/stylelx.css">
-  <title>Linus Torvalds bio</title>
+  <title>Biographies</title>
 </head>
 
 <body>
@@ -306,12 +306,18 @@
         <h2 class="title-section-box">Linus Torvalds</h2>
         <img id="info-image" src="./assets/linus.jpg" alt="Linus Torvalds image">
         <h3 class="title-section-box">Personal info</h3>
-        <h5>Born</h5>
-        <p>28 December 1969 (age 54)</p>
-        <h5>Nationality</h5>
-        <p>Finnish American</p>
-        <h5>Occupation</h5>
-        <p>Software engineer</p>
+        <div class="personal-info-box">
+          <p class="personal-info-box-title">Born</p>
+          <p class="personal-info-box-detail">28 December 1969 (age 54)</p>
+        </div>
+        <div class="personal-info-box">
+          <p class="personal-info-box-title">Nationality</p>
+          <p class="personal-info-box-detail">Finnish American</p>
+        </div>
+        <div class="personal-info-box">
+          <p class="personal-info-box-title">Occupation</h>
+          <p class="personal-info-box-detail">Software engineer</p>
+        </div>
       </div>
     </div>
   </section>
